[project]
name = "api"
version = "1.0.0"
description = ""
authors = [
    {name = "Nik-Sch",email = "mail@niklas-schelten.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "flask-httpauth (>=4.8.0,<5.0.0)",
    "flask-compress (>=1.18,<2.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "flask-session (>=0.8.0,<0.9.0)",
    "pywebpush (>=2.0.3,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.405"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.3.0"

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportMissingTypeStubs = false

[tool.flake8]
ignore = ['E203', 'F541', 'F405', 'F403', 'E501', 'W503']
exclude = [".git", ".venv", "ui"]